kubernetes/postgres-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-egress-policy
spec:
  podSelector:
    matchLabels:
      app: postgres-app
  policyTypes:
  - Egress
  egress: []
