kubernetes/postgres-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-ingress-policy
spec:
  podSelector:
    matchLabels:
      app: postgres-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: inventory-api
